--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -10,7 +10,7 @@
     </mat-form-field>
     <button mat-stroked-button (click)="filePicker.click()" type="button">Pick Image</button>
     <input type="file" #filePicker (change)="onImagePicked($event)" />
-    <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview">
+    <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid">
       <img [src]="imagePreview" [alt]="form.value.title">
     </div>
     <mat-form-field>
